# av-test-comparator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: core.h
core/structure/: antivirus.h  catalog.h  settings.cpp  settings.h
core/windows/pc/: detail.cpp  detail.h  main.cpp  main.h
core/windows/pc/csv/: export.cpp  export.h
core/windows/pc/helper/: assign.cpp  assign.h  display.cpp  display.h  values.cpp  values.h
